--- a/links-and-images/index.html
+++ b/links-and-images/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Homepage</h1>
-        <a href=”https://theuselessweb.com/”>click me</a>
+        <a href="https://theuselessweb.com/">click me</a>
         <a href="./pages/about.html">About</a>
         <img src="images/first-img.jpg" alt="puppy">
     </body>
